--- a/metadata.yaml
+++ b/metadata.yaml
@@ -29,5 +29,6 @@ subjects:
 - !lcc 'F1001'
 - !lcsh 'Alaska -- Description and travel'
 - !lcc 'F850.5'
+- GITenberg
 title: "Aljaska en de Canada-spoorweg\r\nDe Aarde en haar Volken, 1892"
 url: http://www.gutenberg.org/ebooks/14830
